fixing align logos

--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -112,8 +112,9 @@
         padding: 1.875rem 0;
         display: grid;
         grid-gap: 1rem;
-        grid-template-columns: repeat(auto-fill, minmax(100px, 180px));
+        grid-template-columns: repeat(auto-fit, minmax(100px, 180px));
         justify-content: center;
+        justify-items: center;
         align-items: center;
 
         img {
