--- a/scss/main.css
+++ b/scss/main.css
@@ -324,11 +324,12 @@ nav .burger div {
   display: -ms-grid;
   display: grid;
   grid-gap: 1rem;
-  -ms-grid-columns: (minmax(100px, 180px))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(100px, 180px));
+  -ms-grid-columns: (minmax(100px, 180px))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(100px, 180px));
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
